# portfolio

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json
client/: Cargo.toml  Trunk.toml
client/client/src/: tailwind.css
client/src/: main.rs  styles.css  tailwind.css
client/src/components/: line_input.rs  mod.rs  project_cards.rs
client/src/pages/: home.rs  login.rs  mod.rs  new_project.rs
common/: Cargo.toml
common/src/: lib.rs
data/: projects.json
server/: .env  Cargo.toml
server/src/: main.rs
src/: main.rs  styles.css
src/components/: project_cards.rs
